shuffle button functionality

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <div class="box box-group-4 box-16"></div>
             </div>
         </div>
+        <div class="buttons-box">
+            <button id="shuffle">Shuffle</button>
+            <button id="clear">Clear</button>
+            <button id="submit">Submit</button>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
