--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
                 <div class="box box-group-4 box-16"></div>
             </div>
         </div>
+        <div class="remaining-guesses">
+        </div>
         <div class="buttons-box">
-            <button id="shuffle">Shuffle</button>
-            <button id="clear">Clear</button>
-            <button id="submit">Submit</button>
+            <button id="shuffle" disabled="false">Shuffle</button>
+            <!--<button id="clear">Clear</button>-->
+            <button id="submit" disabled="true">Submit</button>
         </div>
     </div>
     <script src="app.js"></script>
