fixing word selection

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="game-container">
+        <div class="one-away"></div>
         <div class="game-box">
             <div class="group group-1">
                 <div class="box box-group-1 box-1"></div>
