--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="buttons-box">
             <button id="shuffle" disabled="false">Shuffle</button>
-            <!--<button id="clear">Clear</button>-->
+            <button id="clear">Clear</button>
             <button id="submit" disabled="true">Submit</button>
         </div>
     </div>
