--- a/index.html
+++ b/index.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="game-container">
-        <div class="one-away"></div>
-        <div class="game-box">
-            <div class="group group-1">
-                <div class="box box-group-1 box-1"></div>
-                <div class="box box-group-1 box-2"></div>
-                <div class="box box-group-1 box-3"></div>
-                <div class="box box-group-1 box-4"></div>
+        <div class="play-container">
+            <div class="instructions">Create groups of four!</div>
+            <div class="game-box">
+                <div class="group group-1">
+                    <div class="box box-group-1 box-1"></div>
+                    <div class="box box-group-1 box-2"></div>
+                    <div class="box box-group-1 box-3"></div>
+                    <div class="box box-group-1 box-4"></div>
+                </div>
+                <div class="group group-2">
+                    <div class="box box-group-2 box-5"></div>
+                    <div class="box box-group-2 box-6"></div>
+                    <div class="box box-group-2 box-7"></div>
+                    <div class="box box-group-2 box-8"></div>
+                </div>
+                <div class="group group-3">
+                    <div class="box box-group-3 box-9"></div>
+                    <div class="box box-group-3 box-10"></div>
+                    <div class="box box-group-3 box-11"></div>
+                    <div class="box box-group-3 box-12"></div>
+                </div>
+                <div class="group group-4">
+                    <div class="box box-group-4 box-13"></div>
+                    <div class="box box-group-4 box-14"></div>
+                    <div class="box box-group-4 box-15"></div>
+                    <div class="box box-group-4 box-16"></div>
+                </div>
             </div>
-            <div class="group group-2">
-                <div class="box box-group-2 box-5"></div>
-                <div class="box box-group-2 box-6"></div>
-                <div class="box box-group-2 box-7"></div>
-                <div class="box box-group-2 box-8"></div>
+            <div class="one-away"></div>
+            <div class="remaining-guesses">
             </div>
-            <div class="group group-3">
-                <div class="box box-group-3 box-9"></div>
-                <div class="box box-group-3 box-10"></div>
-                <div class="box box-group-3 box-11"></div>
-                <div class="box box-group-3 box-12"></div>
+            <div class="buttons-box">
+                <button id="shuffle" disabled="false">Shuffle</button>
+                <button id="clear">Clear</button>
+                <button id="submit" disabled="true">Submit</button>
             </div>
-            <div class="group group-4">
-                <div class="box box-group-4 box-13"></div>
-                <div class="box box-group-4 box-14"></div>
-                <div class="box box-group-4 box-15"></div>
-                <div class="box box-group-4 box-16"></div>
-            </div>
-        </div>
-        <div class="remaining-guesses">
-        </div>
-        <div class="buttons-box">
-            <button id="shuffle" disabled="false">Shuffle</button>
-            <button id="clear">Clear</button>
-            <button id="submit" disabled="true">Submit</button>
         </div>
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
